--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,9 +1,21 @@
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  line-height: 1.8;
+  font-size: 16px;
+}
+
+svg {
+  display: block;
+}
+
+button {
+  border-width: 0px;
 }
 
 a {
@@ -11,6 +23,15 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+table {
+  border-collapse: separate;
+  border-spacing: 5px 1rem;
+}
+
+blockquote {
+  font-style: italic;
+}
+
+ul {
+  list-style: none;
 }
