--- a/src/core/styles/globals.css
+++ b/src/core/styles/globals.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1 {
+  @apply mt-6 mb-6 text-4xl;
+}
+
+h2 {
+  @apply mt-4 mb-4 text-2xl;
+}
+
+h3 {
+  @apply mt-2 mb-2 text-xl;
+}
+
+body {
+  @apply bg-bg-light text-text-light dark:bg-bg-dark dark:text-text-dark;
+}
