--- a/src/core/styles/globals.css
+++ b/src/core/styles/globals.css
@@ -17,3 +17,16 @@ h3 {
 body {
   @apply bg-bg-light text-text-light dark:bg-bg-dark dark:text-text-dark;
 }
+
+@keyframes slide-down {
+  0% {
+    transform: scale(0.6) translateY(-90%);
+  }
+  100% {
+    transform: scale(1) translateY(0);
+  }
+}
+
+.tooltip {
+  animation: slide-down 0.07s;
+}
