--- a/src/core/styles/globals.css
+++ b/src/core/styles/globals.css
@@ -2,28 +2,55 @@
 @tailwind components;
 @tailwind utilities;
 
-h1 {
-  @apply mt-6 mb-6 text-4xl;
+html {
+  @apply font-0;
 }
 
-h2 {
-  @apply mt-4 mb-4 text-2xl;
+code,
+kbd,
+samp,
+pre {
+  @apply font-0 text-base;
 }
 
-h3 {
-  @apply mt-2 mb-2 text-xl;
+code {
+  @apply inline overflow-x-auto rounded-lg bg-uiBg-light pt-1 pb-1 pr-1 pl-1  text-text-light dark:bg-uiBg-dark dark:text-text-dark;
+}
+
+pre {
+  @apply rounded-lg bg-uiBg-light p-4 text-text-light dark:bg-uiBg-dark dark:text-text-dark;
+}
+
+pre > code {
+  @apply pl-0;
 }
 
 body {
   @apply bg-bg-light text-text-light dark:bg-bg-dark dark:text-text-dark;
 }
 
-code {
-  @apply block overflow-x-auto rounded-lg bg-uiBg-light bg-uiBg-dark pt-1 pb-1 pr-2 pl-2 text-text-light text-text-dark;
+h1 {
+  @apply mt-6 mb-6 text-4xl font-bold leading-relaxed;
 }
 
-pre {
-  @apply rounded-lg bg-uiBg-light bg-uiBg-dark p-1 text-text-light text-text-dark;
+h2 {
+  @apply mt-5 mb-5 text-2xl font-bold leading-relaxed;
+}
+
+h3 {
+  @apply mt-4 mb-4 font-bold leading-relaxed;
+}
+
+li {
+  @apply pl-8;
+}
+
+li:not(:last-child) {
+  @apply mb-2;
+}
+
+p {
+  @apply mt-4 mb-4;
 }
 
 @keyframes slide-down {
